--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,11 @@ docs/_build/
 
 # PyBuilder
 target/
+.vscode/settings.json
+.idea/workspace.xml
+.idea/modules.xml
+.idea/misc.xml
+.idea/MypyConfig.xml
+.idea/Azimuth.iml
+.dmypy.json
+.DS_Store
