--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
   - conda info -a
 
 install:
-  - conda install --yes python=$TRAVIS_PYTHON_VERSION atlas numpy scipy matplotlib nose sphinx pip nose cython pandas scikit-learn=0.20.0 biopython
+  - conda install --yes python=$TRAVIS_PYTHON_VERSION atlas numpy scipy nose sphinx pip nose cython pandas scikit-learn=0.20.0 biopython
   - pip install . 
 
 # command to run tests, e.g. python setup.py test
