--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_install:
 install:
   - conda config --add channels conda-forge
   - conda config --set channel_priority strict
-  - conda install --yes python=$TRAVIS_PYTHON_VERSION atlas numpy scipy nose sphinx pip nose cython pandas matplotlib mkl scikit-learn=0.20.0 biopython
+  - conda install --yes python=$TRAVIS_PYTHON_VERSION numpy scipy nose sphinx pip nose cython pandas matplotlib mkl scikit-learn=0.20.0 biopython
   - pip install . 
 
 # command to run tests, e.g. python setup.py test
