--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 click==7.0
 biopython>=1.73
-scipy>=1.3.1
+scipy>=1.3.0
 numpy>=1.15.4
 scikit-learn==0.21.3
-pandas==0.24.2
+pandas>=0.24.2
 GPy>=1.9.8
 hyperopt==0.1.1
 paramz==0.9.4
